--- a/src/components/nav-bar/nav-bar.css
+++ b/src/components/nav-bar/nav-bar.css
@@ -3,10 +3,11 @@
   top: 0;
   z-index: 100;
   height: 60px;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  padding: 0.75rem 2rem 0.5rem;
+  padding: 0.5rem 2rem 0.5rem;
   color: black;
   background-color: #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
