--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -3,7 +3,7 @@
   align-items: center;
   gap: 8rem;
   justify-content: center;
-  padding: 2rem;
+  padding: 0 2rem;
   text-align: center;
 }
 
